@@ -27,11 +27,11 @@ val scalacVersion = "2.13.11"
 // source version of the Java language
 val javaVersion = "21"
 // version of the GraalVM JDK
-val graalVersion = "21.0.1"
+val graalVersion = "21.0.2"
 // Version used for the Graal/Truffle related Maven packages
 // Keep in sync with GraalVM.version. Do not change the name of this variable,
 // it is used by the Rust build script via regex matching.
-val graalMavenPackagesVersion = "23.1.0"
+val graalMavenPackagesVersion = "23.1.2"
 val targetJavaVersion         = "17"
 val defaultDevEnsoVersion     = "0.0.0-dev"
 val ensoVersion = sys.env.getOrElse(
@@ -47,9 +47,24 @@ val currentEdition = sys.env.getOrElse(
 val stdLibVersion       = defaultDevEnsoVersion
 val targetStdlibVersion = ensoVersion
 
-Global / onLoad := GraalVM.addVersionCheck(
-  graalMavenPackagesVersion
-)((Global / onLoad).value)
+lazy val graalVMVersionCheck = taskKey[Unit]("Check GraalVM and Java versions")
+graalVMVersionCheck := {
+  GraalVM.versionCheck(
+    graalVersion,
+    graalMavenPackagesVersion,
+    javaVersion,
+    state.value.log
+  )
+}
+
+// Inspired by https://www.scala-sbt.org/1.x/docs/Howto-Startup.html#How+to+take+an+action+on+startup
+lazy val startupStateTransition: State => State = { s: State =>
+  "graalVMVersionCheck" :: s
+}
+Global / onLoad := {
+  val old = (Global / onLoad).value
+  startupStateTransition compose old
+}
 
 /* Note [Engine And Launcher Version]
  * ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
@@ -290,6 +305,8 @@ lazy val enso = (project in file("."))
     searcher,
     launcher,
     downloader,
+    `runtime-integration-tests`,
+    `runtime-benchmarks`,
     `runtime-parser`,
     `runtime-compiler`,
     `runtime-language-epb`,
@@ -301,12 +318,14 @@ lazy val enso = (project in file("."))
     `runtime-version-manager`,
     `runtime-version-manager-test`,
     editions,
+    semver,
     `distribution-manager`,
     `edition-updater`,
     `edition-uploader`,
     `library-manager`,
     `library-manager-test`,
     `connected-lock-manager`,
+    `connected-lock-manager-server`,
     syntax,
     testkit,
     `common-polyglot-core-utils`,
@@ -320,6 +339,7 @@ lazy val enso = (project in file("."))
     `enso-test-java-helpers`,
     `exploratory-benchmark-java-helpers`,
     `benchmark-java-helpers`,
+    `benchmarks-common`,
     `bench-processor`
   )
   .settings(Global / concurrentRestrictions += Tags.exclusive(Exclusive))
@@ -467,7 +487,6 @@ val zio = Seq(
 // === Other ==================================================================
 
 val bcpkixJdk15Version      = "1.70"
-val bumpVersion             = "0.1.3"
 val declineVersion          = "2.4.1"
 val directoryWatcherVersion = "0.18.0"
 val flatbuffersVersion      = "1.12.0"
@@ -731,8 +750,7 @@ lazy val `logging-service` = project
     libraryDependencies ++= Seq(
       "org.slf4j"      % "slf4j-api" % slf4jVersion,
       "com.typesafe"   % "config"    % typesafeConfigVersion,
-      "org.scalatest" %% "scalatest" % scalatestVersion % Test,
-      akkaHttp
+      "org.scalatest" %% "scalatest" % scalatestVersion % Test
     )
   )
   .dependsOn(`logging-utils`)
@@ -1380,7 +1398,7 @@ lazy val `language-server` = (project in file("engine/language-server"))
   .dependsOn(`json-rpc-server`)
   .dependsOn(`task-progress-notifications`)
   .dependsOn(`library-manager`)
-  .dependsOn(`connected-lock-manager`)
+  .dependsOn(`connected-lock-manager-server`)
   .dependsOn(`edition-updater`)
   .dependsOn(`logging-utils-akka`)
   .dependsOn(`logging-service`)
@@ -1571,7 +1589,6 @@ lazy val `runtime-test-instruments` =
     )
 
 lazy val runtime = (project in file("engine/runtime"))
-  .configs(Benchmark)
   .enablePlugins(JPMSPlugin)
   .settings(
     frgaalJavaCompilerSetting,
@@ -1584,39 +1601,9 @@ lazy val runtime = (project in file("engine/runtime"))
     version := ensoVersion,
     commands += WithDebugCommand.withDebug,
     inConfig(Compile)(truffleRunOptionsSettings),
-    // Explicitly provide javafmt task for the custom Benchmark configuration.
-    // Note that because of the custom Benchmark configuration, the `JavaFormatterPlugin`
-    // is not able to register this task on its own.
-    Benchmark / javafmt := {
-      val streamz = streams.value
-      val sD      = (Benchmark / javafmt / sourceDirectories).value.toList
-      val iF      = (Benchmark / javafmt / includeFilter).value
-      val eF      = (Benchmark / javafmt / excludeFilter).value
-      val cache   = streamz.cacheStoreFactory
-      val options = (Compile / javafmtOptions).value
-      JavaFormatter(sD, iF, eF, streamz, cache, options)
-    },
-    Benchmark / javafmtCheck := {
-      val streamz = streams.value
-      val baseDir = (ThisBuild / baseDirectory).value
-      val sD      = (Benchmark / javafmt / sourceDirectories).value.toList
-      val iF      = (Benchmark / javafmt / includeFilter).value
-      val eF      = (Benchmark / javafmt / excludeFilter).value
-      val cache   = (javafmt / streams).value.cacheStoreFactory
-      val options = (Compile / javafmtOptions).value
-      JavaFormatter.check(baseDir, sD, iF, eF, streamz, cache, options)
-    },
-    Test / parallelExecution := false,
-    Test / logBuffered := false,
-    Test / javaOptions ++= Seq(
-      "-Dtck.values=java-host,enso",
-      "-Dtck.language=enso",
-      "-Dtck.inlineVerifierInstrument=false",
-      "-Dpolyglot.engine.AllowExperimentalOptions=true"
-    ),
     scalacOptions += "-Ymacro-annotations",
     scalacOptions ++= Seq("-Ypatmat-exhaust-depth", "off"),
-    libraryDependencies ++= jmh ++ jaxb ++ GraalVM.langsPkgs ++ Seq(
+    libraryDependencies ++= GraalVM.langsPkgs ++ Seq(
       "org.apache.commons"   % "commons-lang3"           % commonsLangVersion,
       "org.apache.tika"      % "tika-core"               % tikaVersion,
       "com.lihaoyi"         %% "fansi"                   % fansiVersion,
@@ -1624,18 +1611,13 @@ lazy val runtime = (project in file("engine/runtime"))
       "org.graalvm.sdk"      % "polyglot-tck"            % graalMavenPackagesVersion % "provided",
       "org.graalvm.truffle"  % "truffle-api"             % graalMavenPackagesVersion % "provided",
       "org.graalvm.truffle"  % "truffle-dsl-processor"   % graalMavenPackagesVersion % "provided",
-      "org.graalvm.truffle"  % "truffle-tck"             % graalMavenPackagesVersion % Test,
-      "org.graalvm.truffle"  % "truffle-tck-common"      % graalMavenPackagesVersion % Test,
-      "org.graalvm.truffle"  % "truffle-tck-tests"       % graalMavenPackagesVersion % Test,
       "org.netbeans.api"     % "org-openide-util-lookup" % netbeansApiVersion        % "provided",
       "org.scalacheck"      %% "scalacheck"              % scalacheckVersion         % Test,
       "org.scalactic"       %% "scalactic"               % scalacticVersion          % Test,
       "org.scalatest"       %% "scalatest"               % scalatestVersion          % Test,
-      "org.graalvm.truffle"  % "truffle-api"             % graalMavenPackagesVersion % Benchmark,
       "junit"                % "junit"                   % junitVersion              % Test,
       "com.github.sbt"       % "junit-interface"         % junitIfVersion            % Test,
       "org.hamcrest"         % "hamcrest-all"            % hamcrestVersion           % Test,
-      "org.slf4j"            % "slf4j-nop"               % slf4jVersion              % Benchmark,
       "org.slf4j"            % "slf4j-api"               % slf4jVersion              % Test
     ),
     // Add all GraalVM packages with Runtime scope - we don't need them for compilation,
@@ -1648,109 +1630,6 @@ lazy val runtime = (project in file("engine/runtime"))
       val tools =
         GraalVM.toolsPkgs.map(_.withConfigurations(Some(Runtime.name)))
       necessaryModules ++ langs ++ tools
-    }
-  )
-  .settings(
-    Test / unmanagedClasspath := (LocalProject(
-      "runtime-fat-jar"
-    ) / Compile / exportedProducts).value,
-    Test / addModules := Seq(
-      (`runtime-test-instruments` / javaModuleName).value,
-      (`runtime-fat-jar` / javaModuleName).value
-    ),
-    Test / modulePath := {
-      val updateReport = (Test / update).value
-      val requiredModIds =
-        GraalVM.modules ++ GraalVM.langsPkgs ++ GraalVM.insightPkgs ++ logbackPkg ++ Seq(
-          "org.slf4j"           % "slf4j-api"               % slf4jVersion,
-          "org.netbeans.api"    % "org-openide-util-lookup" % netbeansApiVersion,
-          "org.graalvm.sdk"     % "polyglot-tck"            % graalMavenPackagesVersion,
-          "org.graalvm.truffle" % "truffle-tck"             % graalMavenPackagesVersion,
-          "org.graalvm.truffle" % "truffle-tck-common"      % graalMavenPackagesVersion,
-          "org.graalvm.truffle" % "truffle-tck-tests"       % graalMavenPackagesVersion
-        )
-      val requiredMods = JPMSUtils.filterModulesFromUpdate(
-        updateReport,
-        requiredModIds,
-        streams.value.log,
-        shouldContainAll = true
-      )
-      val runtimeTestInstrumentsMod =
-        (`runtime-test-instruments` / Compile / exportedProducts).value.head.data
-      val runtimeMod =
-        (`runtime-fat-jar` / Compile / exportedProducts).value.head.data
-      requiredMods ++
-      Seq(runtimeTestInstrumentsMod) ++
-      Seq(runtimeMod)
-    },
-    Test / patchModules := {
-
-      /** All these modules will be in --patch-module cmdline option to java, which means that
-        * for the JVM, it will appear that all the classes contained in these sbt projects are contained
-        * in the `org.enso.runtime` module. In this way, we do not have to assembly the `runtime.jar`
-        * fat jar.
-        */
-      val modulesToPatchIntoRuntime: Seq[File] =
-        (LocalProject(
-          "runtime-instrument-common"
-        ) / Compile / productDirectories).value ++
-        (LocalProject(
-          "runtime-instrument-id-execution"
-        ) / Compile / productDirectories).value ++
-        (LocalProject(
-          "runtime-instrument-repl-debugger"
-        ) / Compile / productDirectories).value ++
-        (LocalProject(
-          "runtime-instrument-runtime-server"
-        ) / Compile / productDirectories).value ++
-        (LocalProject(
-          "runtime-language-epb"
-        ) / Compile / productDirectories).value ++
-        (LocalProject(
-          "runtime-compiler"
-        ) / Compile / productDirectories).value ++
-        (LocalProject(
-          "refactoring-utils"
-        ) / Compile / productDirectories).value ++
-        (LocalProject(
-          "runtime-instrument-common"
-        ) / Test / productDirectories).value
-      // Patch test-classes into the runtime module. This is standard way to deal with the
-      // split package problem in unit tests. For example, Maven's surefire plugin does this.
-      val testClassesDir = (Test / productDirectories).value.head
-      Map(
-        (`runtime-fat-jar` / javaModuleName).value -> (modulesToPatchIntoRuntime ++ Seq(
-          testClassesDir
-        ))
-      )
-    },
-    Test / addReads := {
-      val runtimeModName = (`runtime-fat-jar` / javaModuleName).value
-      val testInstrumentsModName =
-        (`runtime-test-instruments` / javaModuleName).value
-      Map(
-        // We patched the test-classes into the runtime module. These classes access some stuff from
-        // unnamed module. Thus, let's add ALL-UNNAMED.
-        runtimeModName -> Seq(
-          "ALL-UNNAMED",
-          testInstrumentsModName,
-          "truffle.tck.tests",
-          "org.openide.util.lookup.RELEASE180"
-        ),
-        testInstrumentsModName -> Seq(runtimeModName)
-      )
-    },
-    Test / javaOptions ++= testLogProviderOptions
-  )
-  .settings(
-    Test / fork := true,
-    Test / envVars ++= distributionEnvironmentOverrides ++ Map(
-      "ENSO_TEST_DISABLE_IR_CACHE" -> "false",
-      "ENSO_EDITION_PATH"          -> file("distribution/editions").getCanonicalPath
-    ),
-    Test / compile := {
-      (LocalProject("runtime-instrument-common") / Test / compile).value
-      (Test / compile).value
     }
   )
   .settings(
@@ -1778,50 +1657,6 @@ lazy val runtime = (project in file("engine/runtime"))
       .dependsOn(`std-aws` / Compile / packageBin)
       .value
   )
-  /** Benchmark settings */
-  .settings(
-    inConfig(Benchmark)(Defaults.testSettings),
-    Benchmark / javacOptions --= Seq(
-      "-source",
-      frgaalSourceLevel,
-      "--enable-preview"
-    ),
-    (Benchmark / javaOptions) :=
-      (LocalProject("std-benchmarks") / Benchmark / run / javaOptions).value,
-    (Benchmark / javaOptions) ++= benchOnlyOptions,
-    Benchmark / fork := true,
-    Benchmark / parallelExecution := false,
-    // This ensures that the full class-path of runtime-fat-jar is put on
-    // class-path of the Java compiler (and thus the benchmark annotation processor).
-    (Benchmark / compile / unmanagedClasspath) ++=
-      (LocalProject(
-        "runtime-fat-jar"
-      ) / Compile / fullClasspath).value,
-    bench := (Benchmark / test)
-      .tag(Exclusive)
-      .dependsOn(
-        // runtime.jar fat jar needs to be assembled as it is used in the
-        // benchmarks. This dependency is here so that `runtime/bench` works
-        // after clean build.
-        LocalProject("runtime-fat-jar") / assembly
-      )
-      .value,
-    (Benchmark / testOnly) := (Benchmark / testOnly)
-      .dependsOn(
-        LocalProject("runtime-fat-jar") / assembly
-      )
-      .evaluated,
-    benchOnly := Def.inputTaskDyn {
-      import complete.Parsers.spaceDelimited
-      val name = spaceDelimited("<name>").parsed match {
-        case List(name) => name
-        case _          => throw new IllegalArgumentException("Expected one argument.")
-      }
-      Def.task {
-        (Benchmark / testOnly).toTask(" -- -z " + name).value
-      }
-    }.evaluated
-  )
   .dependsOn(`common-polyglot-core-utils`)
   .dependsOn(`edition-updater`)
   .dependsOn(`interpreter-dsl`)
@@ -1833,8 +1668,239 @@ lazy val runtime = (project in file("engine/runtime"))
   .dependsOn(`runtime-compiler`)
   .dependsOn(`connected-lock-manager`)
   .dependsOn(testkit % Test)
-  .dependsOn(`logging-service-logback` % "test->test")
-  .dependsOn(`runtime-test-instruments` % "test->compile")
+
+/** A project holding all the runtime integration tests. These tests require, among other things,
+  * the `org.enso.runtime` JPMS module, so it is easier to keep them in a separate project.
+  * For standard unit tests, use `runtime/Test`.
+  */
+lazy val `runtime-integration-tests` =
+  (project in file("engine/runtime-integration-tests"))
+    .enablePlugins(JPMSPlugin)
+    .settings(
+      frgaalJavaCompilerSetting,
+      Compile / logManager :=
+        sbt.internal.util.CustomLogManager.excludeMsg(
+          "Could not determine source for class ",
+          Level.Warn
+        ),
+      commands += WithDebugCommand.withDebug,
+      libraryDependencies ++= GraalVM.modules ++ GraalVM.langsPkgs ++ GraalVM.insightPkgs ++ logbackPkg ++ Seq(
+        "org.graalvm.polyglot" % "polyglot"              % graalMavenPackagesVersion % "provided",
+        "org.graalvm.sdk"      % "polyglot-tck"          % graalMavenPackagesVersion % "provided",
+        "org.graalvm.truffle"  % "truffle-api"           % graalMavenPackagesVersion % "provided",
+        "org.graalvm.truffle"  % "truffle-dsl-processor" % graalMavenPackagesVersion % "provided",
+        "org.graalvm.truffle"  % "truffle-tck"           % graalMavenPackagesVersion % Test,
+        "org.graalvm.truffle"  % "truffle-tck-common"    % graalMavenPackagesVersion % Test,
+        "org.graalvm.truffle"  % "truffle-tck-tests"     % graalMavenPackagesVersion % Test,
+        "org.scalacheck"      %% "scalacheck"            % scalacheckVersion         % Test,
+        "org.scalactic"       %% "scalactic"             % scalacticVersion          % Test,
+        "org.scalatest"       %% "scalatest"             % scalatestVersion          % Test,
+        "junit"                % "junit"                 % junitVersion              % Test,
+        "com.github.sbt"       % "junit-interface"       % junitIfVersion            % Test,
+        "org.hamcrest"         % "hamcrest-all"          % hamcrestVersion           % Test,
+        "org.slf4j"            % "slf4j-api"             % slf4jVersion              % Test
+      ),
+      Test / javacOptions ++= Seq(
+        "-s",
+        (Compile / sourceManaged).value.getAbsolutePath,
+        "-Xlint:unchecked"
+      ),
+      Test / compile := (Test / compile)
+        .dependsOn(Def.task { (Compile / sourceManaged).value.mkdirs })
+        .dependsOn(`runtime-fat-jar` / Compile / compileModuleInfo)
+        .value,
+      Test / fork := true,
+      Test / parallelExecution := false,
+      Test / logBuffered := false,
+      Test / envVars ++= distributionEnvironmentOverrides ++ Map(
+        "ENSO_TEST_DISABLE_IR_CACHE" -> "false",
+        "ENSO_EDITION_PATH"          -> file("distribution/editions").getCanonicalPath
+      ),
+      inConfig(Test)(truffleRunOptionsSettings),
+      Test / javaOptions ++= Seq(
+        "-Dtck.values=java-host,enso",
+        "-Dtck.language=enso",
+        "-Dtck.inlineVerifierInstrument=false",
+        "-Dpolyglot.engine.AllowExperimentalOptions=true"
+      ),
+      Test / javaOptions ++= testLogProviderOptions,
+      Test / addModules := Seq(
+        (`runtime-test-instruments` / javaModuleName).value,
+        (`runtime-fat-jar` / javaModuleName).value
+      ),
+      Test / modulePath := {
+        val updateReport = (Test / update).value
+        val requiredModIds =
+          GraalVM.modules ++ GraalVM.langsPkgs ++ GraalVM.insightPkgs ++ logbackPkg ++ Seq(
+            "org.slf4j"           % "slf4j-api"               % slf4jVersion,
+            "org.netbeans.api"    % "org-openide-util-lookup" % netbeansApiVersion,
+            "org.graalvm.sdk"     % "polyglot-tck"            % graalMavenPackagesVersion,
+            "org.graalvm.truffle" % "truffle-tck"             % graalMavenPackagesVersion,
+            "org.graalvm.truffle" % "truffle-tck-common"      % graalMavenPackagesVersion,
+            "org.graalvm.truffle" % "truffle-tck-tests"       % graalMavenPackagesVersion
+          )
+        val requiredMods = JPMSUtils.filterModulesFromUpdate(
+          updateReport,
+          requiredModIds,
+          streams.value.log,
+          shouldContainAll = true
+        )
+        val runtimeTestInstrumentsMod =
+          (`runtime-test-instruments` / Compile / exportedProducts).value.head.data
+        val runtimeMod =
+          (`runtime-fat-jar` / Compile / exportedProducts).value.head.data
+        requiredMods ++
+        Seq(runtimeTestInstrumentsMod) ++
+        Seq(runtimeMod)
+      },
+      Test / patchModules := {
+
+        /** All these modules will be in --patch-module cmdline option to java, which means that
+          * for the JVM, it will appear that all the classes contained in these sbt projects are contained
+          * in the `org.enso.runtime` module. In this way, we do not have to assembly the `runtime.jar`
+          * fat jar.
+          */
+        val modulesToPatchIntoRuntime: Seq[File] =
+          (LocalProject(
+            "runtime-instrument-common"
+          ) / Compile / productDirectories).value ++
+          (LocalProject(
+            "runtime-instrument-id-execution"
+          ) / Compile / productDirectories).value ++
+          (LocalProject(
+            "runtime-instrument-repl-debugger"
+          ) / Compile / productDirectories).value ++
+          (LocalProject(
+            "runtime-instrument-runtime-server"
+          ) / Compile / productDirectories).value ++
+          (LocalProject(
+            "runtime-language-epb"
+          ) / Compile / productDirectories).value ++
+          (LocalProject(
+            "runtime-compiler"
+          ) / Compile / productDirectories).value ++
+          (LocalProject(
+            "refactoring-utils"
+          ) / Compile / productDirectories).value ++
+          (LocalProject(
+            "runtime-instrument-common"
+          ) / Test / productDirectories).value
+        // Patch test-classes into the runtime module. This is standard way to deal with the
+        // split package problem in unit tests. For example, Maven's surefire plugin does this.
+        val testClassesDir = (Test / productDirectories).value.head
+        Map(
+          (`runtime-fat-jar` / javaModuleName).value -> (modulesToPatchIntoRuntime ++ Seq(
+            testClassesDir
+          ))
+        )
+      },
+      Test / addReads := {
+        val runtimeModName = (`runtime-fat-jar` / javaModuleName).value
+        val testInstrumentsModName =
+          (`runtime-test-instruments` / javaModuleName).value
+        Map(
+          // We patched the test-classes into the runtime module. These classes access some stuff from
+          // unnamed module. Thus, let's add ALL-UNNAMED.
+          runtimeModName -> Seq(
+            "ALL-UNNAMED",
+            testInstrumentsModName,
+            "truffle.tck.tests",
+            "org.openide.util.lookup.RELEASE180"
+          ),
+          testInstrumentsModName -> Seq(runtimeModName)
+        )
+      }
+    )
+    .dependsOn(`runtime-fat-jar`)
+    .dependsOn(`runtime-test-instruments`)
+    .dependsOn(`logging-service-logback` % "test->test")
+    .dependsOn(testkit % Test)
+    .dependsOn(`connected-lock-manager-server`)
+
+/** A project that holds only benchmarks for `runtime`. Unlike `runtime-integration-tests`, its execution requires
+  * the whole `runtime-fat-jar` assembly, as we want to be as close to the enso distribution as possible.
+  */
+lazy val `runtime-benchmarks` =
+  (project in file("engine/runtime-benchmarks"))
+    .enablePlugins(JPMSPlugin)
+    .settings(
+      frgaalJavaCompilerSetting,
+      // Note that withDebug command only makes sense if you use `@Fork(0)` in your benchmarks.
+      commands += WithDebugCommand.withDebug,
+      libraryDependencies ++= GraalVM.modules ++ GraalVM.langsPkgs ++ GraalVM.toolsPkgs ++ Seq(
+        "org.openjdk.jmh"     % "jmh-core"                 % jmhVersion,
+        "org.openjdk.jmh"     % "jmh-generator-annprocess" % jmhVersion,
+        "jakarta.xml.bind"    % "jakarta.xml.bind-api"     % jaxbVersion,
+        "com.sun.xml.bind"    % "jaxb-impl"                % jaxbVersion,
+        "org.graalvm.truffle" % "truffle-api"              % graalMavenPackagesVersion,
+        "org.slf4j"           % "slf4j-api"                % slf4jVersion,
+        "org.slf4j"           % "slf4j-nop"                % slf4jVersion
+      ),
+      mainClass :=
+        Some("org.enso.interpreter.bench.benchmarks.RuntimeBenchmarksRunner"),
+      Compile / logManager :=
+        sbt.internal.util.CustomLogManager.excludeMsg(
+          "Could not determine source for class ",
+          Level.Warn
+        ),
+      javacOptions --= Seq(
+        "-source",
+        frgaalSourceLevel,
+        "--enable-preview"
+      ),
+      parallelExecution := false,
+      modulePath := {
+        val requiredModIds = GraalVM.modules ++ GraalVM.langsPkgs ++ Seq(
+          "org.slf4j" % "slf4j-api" % slf4jVersion,
+          "org.slf4j" % "slf4j-nop" % slf4jVersion
+        )
+        val requiredMods = JPMSUtils.filterModulesFromUpdate(
+          (Compile / update).value,
+          requiredModIds,
+          streams.value.log,
+          shouldContainAll = true
+        )
+        val runtimeMod =
+          (`runtime-fat-jar` / assembly / assemblyOutputPath).value
+        requiredMods ++ Seq(runtimeMod)
+      },
+      addModules := {
+        val runtimeModuleName = (`runtime-fat-jar` / javaModuleName).value
+        Seq(runtimeModuleName)
+      },
+      addExports := {
+        Map("org.slf4j.nop/org.slf4j.nop" -> Seq("org.slf4j"))
+      },
+      javaOptions ++= {
+        Seq(
+          // To enable logging in benchmarks, add ch.qos.logback module on the modulePath
+          "-Dslf4j.provider=org.slf4j.nop.NOPServiceProvider"
+        )
+      },
+      javaOptions ++= benchOnlyOptions,
+      run / fork := true,
+      run / connectInput := true,
+      bench := Def
+        .task {
+          (Compile / run).toTask("").tag(Exclusive).value
+        }
+        .dependsOn(
+          buildEngineDistribution
+        )
+        .value,
+      benchOnly := Def.inputTaskDyn {
+        import complete.Parsers.spaceDelimited
+        val name = spaceDelimited("<name>").parsed match {
+          case List(name) => name
+          case _          => throw new IllegalArgumentException("Expected one argument.")
+        }
+        Def.task {
+          (Compile / run).toTask(" " + name).value
+        }
+      }.evaluated
+    )
+    .dependsOn(`runtime-fat-jar`)
+    .dependsOn(`benchmarks-common`)
 
 lazy val `runtime-parser` =
   (project in file("engine/runtime-parser"))
@@ -1895,7 +1961,7 @@ lazy val `runtime-instrument-common` =
       bench := (Benchmark / test).tag(Exclusive).value,
       Benchmark / parallelExecution := false,
       (Benchmark / javaOptions) :=
-        (LocalProject("std-benchmarks") / Benchmark / run / javaOptions).value,
+        (LocalProject("std-benchmarks") / Compile / javaOptions).value,
       Test / fork := true,
       Test / envVars ++= distributionEnvironmentOverrides ++ Map(
         "ENSO_TEST_DISABLE_IR_CACHE" -> "false"
@@ -2172,7 +2238,6 @@ lazy val launcher = project
     libraryDependencies ++= Seq(
       "com.typesafe.scala-logging" %% "scala-logging"    % scalaLoggingVersion,
       "org.typelevel"              %% "cats-core"        % catsVersion,
-      "nl.gn0s1s"                  %% "bump"             % bumpVersion,
       "org.apache.commons"          % "commons-compress" % commonsCompressVersion,
       "org.scalatest"              %% "scalatest"        % scalatestVersion % Test,
       akkaSLF4J
@@ -2258,6 +2323,19 @@ lazy val `distribution-manager` = project
   .dependsOn(pkg)
   .dependsOn(`logging-utils`)
 
+lazy val `benchmarks-common` =
+  (project in file("lib/java/benchmarks-common"))
+    .settings(
+      frgaalJavaCompilerSetting,
+      libraryDependencies ++= GraalVM.modules ++ Seq(
+        "org.openjdk.jmh"  % "jmh-core"                 % jmhVersion,
+        "org.openjdk.jmh"  % "jmh-generator-annprocess" % jmhVersion,
+        "jakarta.xml.bind" % "jakarta.xml.bind-api"     % jaxbVersion,
+        "com.sun.xml.bind" % "jaxb-impl"                % jaxbVersion
+      )
+    )
+    .dependsOn(`polyglot-api`)
+
 lazy val `bench-processor` = (project in file("lib/scala/bench-processor"))
   .settings(
     frgaalJavaCompilerSetting,
@@ -2292,28 +2370,21 @@ lazy val `bench-processor` = (project in file("lib/scala/bench-processor"))
     (Test / unmanagedClasspath) :=
       (LocalProject("runtime-fat-jar") / Compile / fullClasspath).value
   )
+  .dependsOn(`benchmarks-common`)
   .dependsOn(`polyglot-api`)
   .dependsOn(runtime)
 
 lazy val `std-benchmarks` = (project in file("std-bits/benchmarks"))
+  .enablePlugins(JPMSPlugin)
   .settings(
     frgaalJavaCompilerSetting,
-    libraryDependencies ++= jmh ++ Seq(
-      "org.openjdk.jmh"      % "jmh-core"                 % jmhVersion                % Benchmark,
-      "org.openjdk.jmh"      % "jmh-generator-annprocess" % jmhVersion                % Benchmark,
-      "org.graalvm.polyglot" % "polyglot"                 % graalMavenPackagesVersion % Benchmark,
-      "org.slf4j"            % "slf4j-api"                % slf4jVersion              % Benchmark,
-      "org.slf4j"            % "slf4j-nop"                % slf4jVersion              % Benchmark
+    libraryDependencies ++= GraalVM.modules ++ GraalVM.langsPkgs ++ Seq(
+      "org.openjdk.jmh"      % "jmh-core"                 % jmhVersion,
+      "org.openjdk.jmh"      % "jmh-generator-annprocess" % jmhVersion,
+      "org.graalvm.polyglot" % "polyglot"                 % graalMavenPackagesVersion,
+      "org.slf4j"            % "slf4j-api"                % slf4jVersion,
+      "org.slf4j"            % "slf4j-nop"                % slf4jVersion
     ),
-    // Add all GraalVM packages with Benchmark scope - we don't need them for compilation,
-    // just provide them for benchmarks (in module-path).
-    libraryDependencies ++= {
-      val necessaryModules =
-        GraalVM.modules.map(_.withConfigurations(Some(Benchmark.name)))
-      val langs =
-        GraalVM.langsPkgs.map(_.withConfigurations(Some(Benchmark.name)))
-      necessaryModules ++ langs
-    },
     commands += WithDebugCommand.withDebug,
     (Compile / logManager) :=
       sbt.internal.util.CustomLogManager.excludeMsg(
@@ -2321,67 +2392,56 @@ lazy val `std-benchmarks` = (project in file("std-bits/benchmarks"))
         Level.Warn
       )
   )
-  .configs(Benchmark)
   .settings(
-    inConfig(Benchmark)(Defaults.testSettings)
-  )
-  .settings(
-    (Benchmark / parallelExecution) := false,
-    (Benchmark / run / fork) := true,
-    (Benchmark / run / connectInput) := true,
-    // This ensures that the full class-path of runtime-fat-jar is put on
-    // class-path of the Java compiler (and thus the benchmark annotation processor).
-    (Benchmark / compile / unmanagedClasspath) ++=
-      (LocalProject(
-        "runtime-fat-jar"
-      ) / Compile / fullClasspath).value,
-    (Benchmark / compile / javacOptions) ++= Seq(
+    parallelExecution := false,
+    run / fork := true,
+    run / connectInput := true,
+    mainClass :=
+      (LocalProject("bench-processor") / mainClass).value,
+    Compile / compile := (Compile / compile)
+      .dependsOn(`runtime-fat-jar` / assembly)
+      .value,
+    Compile / javacOptions ++= Seq(
       "-s",
-      (Benchmark / sourceManaged).value.getAbsolutePath,
+      (Compile / sourceManaged).value.getAbsolutePath,
       "-Xlint:unchecked",
       "-J-Dpolyglotimpl.DisableClassPathIsolation=true",
       "-J-Dpolyglot.engine.WarnInterpreterOnly=false"
     ),
-    (Benchmark / run / javaOptions) ++= {
-      val requiredModules = GraalVM.modules ++ GraalVM.langsPkgs ++ Seq(
+    modulePath := {
+      val requiredModIds = GraalVM.modules ++ GraalVM.langsPkgs ++ Seq(
         "org.slf4j" % "slf4j-api" % slf4jVersion,
         "org.slf4j" % "slf4j-nop" % slf4jVersion
       )
-      val requiredModulesCp = JPMSUtils.filterModulesFromClasspath(
-        (Benchmark / fullClasspath).value,
-        requiredModules,
+      val requiredMods = JPMSUtils.filterModulesFromUpdate(
+        (Compile / update).value,
+        requiredModIds,
         streams.value.log,
         shouldContainAll = true
       )
-      val requiredModulesPaths = requiredModulesCp
-        .map(_.data.getAbsolutePath)
-      val runtimeJar =
-        (LocalProject(
-          "runtime-fat-jar"
-        ) / assembly / assemblyOutputPath).value.getAbsolutePath
-      val allModulePaths = requiredModulesPaths ++ Seq(runtimeJar)
-      val runtimeModuleName =
-        (LocalProject(
-          "runtime-fat-jar"
-        ) / javaModuleName).value
+      val runtimeMod =
+        (`runtime-fat-jar` / assembly / assemblyOutputPath).value
+      requiredMods ++ Seq(runtimeMod)
+    },
+    addModules := {
+      val runtimeModuleName = (`runtime-fat-jar` / javaModuleName).value
+      Seq(runtimeModuleName)
+    },
+    addExports := {
+      Map("org.slf4j.nop/org.slf4j.nop" -> Seq("org.slf4j"))
+    },
+    javaOptions ++= {
       Seq(
         // To enable logging in benchmarks, add ch.qos.logback module on the modulePath
-        "-Dslf4j.provider=org.slf4j.nop.NOPServiceProvider",
-        "--module-path",
-        allModulePaths.mkString(File.pathSeparator),
-        "--add-modules",
-        runtimeModuleName,
-        "--add-exports",
-        "org.slf4j.nop/org.slf4j.nop=org.slf4j"
+        "-Dslf4j.provider=org.slf4j.nop.NOPServiceProvider"
       )
     },
-    (Benchmark / run / mainClass) :=
-      (LocalProject("bench-processor") / mainClass).value
+    javaOptions ++= benchOnlyOptions
   )
   .settings(
     bench := Def
       .task {
-        (Benchmark / run).toTask("").tag(Exclusive).value
+        (Compile / run).toTask("").tag(Exclusive).value
       }
       .dependsOn(
         buildEngineDistribution
@@ -2394,24 +2454,55 @@ lazy val `std-benchmarks` = (project in file("std-bits/benchmarks"))
         case _          => throw new IllegalArgumentException("Expected one argument.")
       }
       Def.task {
-        (Benchmark / run).toTask(" " + name).value
+        (Compile / run).toTask(" " + name).value
       }
     }.evaluated
   )
-  .dependsOn(`bench-processor` % Benchmark)
-  .dependsOn(runtime % Benchmark)
+  .dependsOn(`bench-processor`)
+  .dependsOn(`runtime-fat-jar`)
+  .dependsOn(`std-table`)
 
 lazy val editions = project
   .in(file("lib/scala/editions"))
   .configs(Test)
   .settings(
     frgaalJavaCompilerSetting,
-    resolvers += Resolver.bintrayRepo("gn0s1s", "releases"),
     libraryDependencies ++= Seq(
       "com.typesafe.scala-logging" %% "scala-logging" % scalaLoggingVersion,
-      "nl.gn0s1s"                  %% "bump"          % bumpVersion,
       "io.circe"                   %% "circe-yaml"    % circeYamlVersion,
       "org.scalatest"              %% "scalatest"     % scalatestVersion % Test
+    )
+  )
+  .settings(
+    (Compile / compile) := (Compile / compile)
+      .dependsOn(
+        Def.task {
+          Editions.writeEditionConfig(
+            editionsRoot   = file("distribution") / "editions",
+            ensoVersion    = ensoVersion,
+            editionName    = currentEdition,
+            libraryVersion = stdLibVersion,
+            log            = streams.value.log
+          )
+        }
+      )
+      .value,
+    cleanFiles += baseDirectory.value / ".." / ".." / "distribution" / "editions"
+  )
+  .dependsOn(semver)
+  .dependsOn(testkit % Test)
+
+lazy val semver = project
+  .in(file("lib/scala/semver"))
+  .configs(Test)
+  .settings(
+    frgaalJavaCompilerSetting,
+    libraryDependencies ++= Seq(
+      "com.typesafe.scala-logging" %% "scala-logging"   % scalaLoggingVersion,
+      "io.circe"                   %% "circe-yaml"      % circeYamlVersion,
+      "org.scalatest"              %% "scalatest"       % scalatestVersion % Test,
+      "junit"                       % "junit"           % junitVersion     % Test,
+      "com.github.sbt"              % "junit-interface" % junitIfVersion   % Test
     )
   )
   .settings(
@@ -2435,19 +2526,23 @@ lazy val editions = project
 lazy val downloader = (project in file("lib/scala/downloader"))
   .settings(
     frgaalJavaCompilerSetting,
+    // Fork the tests to make sure that the withDebug command works (we can
+    // attach debugger to the subprocess)
+    (Test / fork) := true,
+    commands += WithDebugCommand.withDebug,
     version := "0.1",
     libraryDependencies ++= circe ++ Seq(
       "com.typesafe.scala-logging" %% "scala-logging"    % scalaLoggingVersion,
       "commons-io"                  % "commons-io"       % commonsIoVersion,
       "org.apache.commons"          % "commons-compress" % commonsCompressVersion,
       "org.scalatest"              %% "scalatest"        % scalatestVersion % Test,
-      akkaActor,
-      akkaStream,
-      akkaHttp,
-      akkaSLF4J
+      "junit"                       % "junit"            % junitVersion     % Test,
+      "com.github.sbt"              % "junit-interface"  % junitIfVersion   % Test,
+      "org.hamcrest"                % "hamcrest-all"     % hamcrestVersion  % Test
     )
   )
   .dependsOn(cli)
+  .dependsOn(`http-test-helper`)
 
 lazy val `edition-updater` = project
   .in(file("lib/scala/edition-updater"))
@@ -2496,6 +2591,7 @@ lazy val `library-manager-test` = project
   .settings(
     frgaalJavaCompilerSetting,
     Test / fork := true,
+    commands += WithDebugCommand.withDebug,
     Test / javaOptions ++= testLogProviderOptions,
     Test / test := (Test / test).tag(simpleLibraryServerTag).value,
     libraryDependencies ++= Seq(
@@ -2510,6 +2606,22 @@ lazy val `library-manager-test` = project
 
 lazy val `connected-lock-manager` = project
   .in(file("lib/scala/connected-lock-manager"))
+  .configs(Test)
+  .settings(
+    frgaalJavaCompilerSetting,
+    libraryDependencies ++= Seq(
+      "com.typesafe.scala-logging" %% "scala-logging" % scalaLoggingVersion,
+      "org.scalatest"              %% "scalatest"     % scalatestVersion % Test
+    )
+  )
+  .dependsOn(`distribution-manager`)
+  .dependsOn(`connected-lock-manager-server` % "test->test")
+  .dependsOn(`polyglot-api`)
+
+/** Unlike `connected-lock-manager` project, has a dependency on akka.
+  */
+lazy val `connected-lock-manager-server` = project
+  .in(file("lib/scala/connected-lock-manager-server"))
   .configs(Test)
   .settings(
     frgaalJavaCompilerSetting,
@@ -2533,7 +2645,6 @@ lazy val `runtime-version-manager` = project
     libraryDependencies ++= Seq(
       "com.typesafe.scala-logging" %% "scala-logging"    % scalaLoggingVersion,
       "org.typelevel"              %% "cats-core"        % catsVersion,
-      "nl.gn0s1s"                  %% "bump"             % bumpVersion,
       "org.apache.commons"          % "commons-compress" % commonsCompressVersion,
       "org.scalatest"              %% "scalatest"        % scalatestVersion % Test,
       akkaHttp
@@ -2779,8 +2890,9 @@ lazy val `std-google-api` = project
     Compile / packageBin / artifactPath :=
       `google-api-polyglot-root` / "std-google-api.jar",
     libraryDependencies ++= Seq(
-      "com.google.api-client" % "google-api-client"          % "1.35.2",
-      "com.google.apis"       % "google-api-services-sheets" % "v4-rev612-1.25.0"
+      "com.google.api-client" % "google-api-client"          % "2.2.0" exclude ("com.google.code.findbugs", "jsr305"),
+      "com.google.apis"       % "google-api-services-sheets" % "v4-rev612-1.25.0" exclude ("com.google.code.findbugs", "jsr305"),
+      "com.google.analytics"  % "google-analytics-data"      % "0.44.0" exclude ("com.google.code.findbugs", "jsr305")
     ),
     Compile / packageBin := Def.task {
       val result = (Compile / packageBin).value
